Fix UI spacing for 1024px

--- a/src/components/Nav/SideBar/styles.module.css
+++ b/src/components/Nav/SideBar/styles.module.css
@@ -1,7 +1,7 @@
 .container {
     position: absolute;
     width:100px;
-    height: 100%;
+    height: 130%;
     background-color: #000;
     float: left;
     color: #fff;
