--- a/src/index.css
+++ b/src/index.css
@@ -175,5 +175,6 @@ select {
 }
 
 #root{
+  width: 1400px;
   height: 100%;
 }
